tests/snapshots/structure__package_lib__pass__package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--package
package_multi_target
--lib

STDERR:

STDOUT:

crate package_multi_target
