tests/snapshots/structure__package_lib__pass__virtual_workspace_single_package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--package
package_multi_target
--lib

STDERR:

STDOUT:

crate package_multi_target
