tests/snapshots/structure__package_lib__pass__workspace_single_package_lib_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--package
package_lib_target
--lib

STDERR:

STDOUT:

crate package_lib_target
