tests/snapshots/structure__package_lib__pass__workspace_single_package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
STDERR:

STDOUT:

crate package_multi_target
└── mod tests: pub(crate) #[cfg(test)]
    └── fn it_works: pub(self) #[test]

